aks-microservices/app/menifests/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-ingress
  namespace: micro-app
spec:
  controller: k8s.io/ingress-nginx
